--- a/index.html
+++ b/index.html
@@ -16,6 +16,43 @@
                     <li>2 ovos</li>
                     <li>sal a gosto</li>
                 </ul>
+            <h3>Tabela de Preços</h3>
+                <table border ="1">
+                    <thead>
+                        <tr>
+                            <th>Ingrediente</th>
+                            <th>Preço</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        <tr>
+                            <td>Macarrão 500g</td>
+                            <td>R$7,00</td>
+                        </tr>
+                        <tr>
+                            <td>Bacon 250g</td>
+                            <td>R$20,00</td>
+                        </tr>               
+                        <tr>
+                            <td>Caixa de Creme de Leite</td>
+                            <td>R$4,00</td>
+                        </tr>         
+                        <tr>
+                            <td>Queijo Ralado 50g</td>
+                            <td>R$5,00</td>
+                        </tr>
+                        <tr>
+                            <td>Dúzia de ovos</td>
+                            <td>R$9,00</td>
+                        </tr>
+                        <tr>
+                            <td>Sal 1kg</td>
+                            <td>R$6,00</td>
+                        </tr>
+                    </tbody>
+
+                </table>
             <h3>Modo de Preparo</h3>
                 <ol>
                     <li>Corte os bacons em cubos pequenos e frite-os, após fritos, adicione o creme de leite e reserve</li>
@@ -24,4 +61,4 @@
                 </ol>
             <p>Agora é só saborear o prato. Boa apetite!</p>
 </body>
-</html>
+</html> 
