--- a/index.html
+++ b/index.html
@@ -60,5 +60,8 @@
                     <li>Escorra o macarrão e não jogue água fria, adicione ovos ao macarrão, misture bem e depois adicione o creme de leite com o bacon</li>
                 </ol>
             <p>Agora é só saborear o prato. Boa apetite!</p>
+            <h3>Vídeo Explicativo</h3>
+                <video width="320" height="240">
+                <source src="https://youtu.be/pgh38V5EAm4?si=6MorTSAe4lxO57iJ" type="video/mp4">  
 </body>
 </html> 
