--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                 </ol>
             <p>Agora é só saborear o prato. Boa apetite!</p>
             <h3>Vídeo Explicativo</h3>
-                <video width="320" height="240">
-                <source src="https://youtu.be/pgh38V5EAm4?si=6MorTSAe4lxO57iJ" type="video/mp4">  
+                <video width="320" height="240" controls>
+                <source src="https://youtu.be/pgh38V5EAm4?si=6MorTSAe4lxO57iJ" type="video/mp4">
+                </video>   
 </body>
 </html> 
