--- a/index.html
+++ b/index.html
@@ -61,8 +61,16 @@
                 </ol>
             <p>Agora é só saborear o prato. Boa apetite!</p>
             <h3>Vídeo Explicativo</h3>
-                <video width="320" height="240" controls>
-                <source src="https://youtu.be/pgh38V5EAm4?si=6MorTSAe4lxO57iJ" type="video/mp4">
-                </video>   
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/pgh38V5EAm4?si=7ksskedIISuxYI6_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
+            <h3>Dúvidas Sobre a Receita</h3>
+                <form action="/aulauvv202420876-main/index.html" method="get">
+                    <label for="nome">Nome</label><br>
+                    <input placeholder="Nome" name="nome" type="text" required><br><br>
+                    <label for="email">Email</label><br>
+                    <input placeholder="Email" name="email" type="text" required><br><br>
+                    <label for="comentario">Comentário</label><br>
+                    <textarea placeholder="Escreva sua dúvida aqui . . ." name="comentario" rows="4" cols="50" required></textarea><br><br>
+                    <input type="submit" value="Enviar">
+                </form>         
 </body>
 </html> 
