--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                     <li>2 ovos</li>
                     <li>sal a gosto</li>
                 </ul>
+
             <h3>Tabela de Preços</h3>
                 <table border ="1">
                     <thead>
@@ -53,24 +54,19 @@
                     </tbody>
 
                 </table>
+
             <h3>Modo de Preparo</h3>
                 <ol>
                     <li>Corte os bacons em cubos pequenos e frite-os, após fritos, adicione o creme de leite e reserve</li>
                     <li>Coloque o macarrão para cozinhar e quando estiver quase pronto, bata os ovos juntos com o sal e o queijo ralado com um garfo e reserve</li>
                     <li>Escorra o macarrão e não jogue água fria, adicione ovos ao macarrão, misture bem e depois adicione o creme de leite com o bacon</li>
                 </ol>
-            <p>Agora é só saborear o prato. Boa apetite!</p>
+                    <p>Agora é só saborear o prato. Boa apetite!</p>
+
+            <h3>Contato em Caso de Dúvidas</h3>
+                <a href="contato.html" target="_blank">Contato</a>
+
             <h3>Vídeo Explicativo</h3>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/pgh38V5EAm4?si=7ksskedIISuxYI6_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
-            <h3>Dúvidas Sobre a Receita</h3>
-                <form action="/aulauvv202420876-main/index.html" method="get">
-                    <label for="nome">Nome</label><br>
-                    <input placeholder="Nome" name="nome" type="text" required><br><br>
-                    <label for="email">Email</label><br>
-                    <input placeholder="Email" name="email" type="text" required><br><br>
-                    <label for="comentario">Comentário</label><br>
-                    <textarea placeholder="Escreva sua dúvida aqui . . ." name="comentario" rows="4" cols="50" required></textarea><br><br>
-                    <input type="submit" value="Enviar">
-                </form>         
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/pgh38V5EAm4?si=7ksskedIISuxYI6_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>   
 </body>
 </html> 
