--- a/minha_pagina.html
+++ b/minha_pagina.html
@@ -13,7 +13,7 @@
         <ul>
             <li><a href="#sobre">SOBRE</a></li>
             <li><a href="#projetos">PROJETOS</a></li>
-            <li><a href="#formações">FORMAÇÕES</a></li>
+            <li><a href="#formacoes">FORMAÇÕES</a></li>
             <li><a href="#contatos">CONTATO</a></li>
         </ul>
     </nav>
@@ -34,24 +34,32 @@
         </article>
     </section>
 
-    <section id="formações">
+    <section id="formacoes">
+        <h3>Formações</h3>
         <article>
-            <h3>Formação</h3>
             <img src="https://png.pngtree.com/background/20230615/original/pngtree-green-field-filled-with-grass-picture-image_3545779.jpg" alt="formação" height="30%" width="30%">
-        <p>Formações de Igor</p>
+            <p>Formações de Igor</p>
         </article>
     </section>
 
     <footer id="contatos">
-        <h3>Contatos</h3> 
-        <img src="imagem instagram" alt="instagram">
-        <p>instagram:</p>
-        <img src="imagem email" alt="email">
-        <p>email:</p>
-        <img src="imagem whatsapp" alt="telefone">
-        <p>telefone</p>
-        <img src="imagem github" alt="github">
-        <p>github:</p>
+            <h3>Contatos</h3> 
+            <article id="instagram">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/Instagram.svg/1024px-Instagram.svg.png" alt="instagram">
+                <p>Instagram:</p>
+            </article>
+            <article id="email">
+                <img src="https://www.liveagent.com/app/uploads/2020/11/logo-gmail.png" alt="email">
+                <p>Email:</p>
+            </article>
+            <article id="whatsapp">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/640px-WhatsApp.svg.png" alt="telefone">
+                <p>Telefone:</p>
+            </article>
+            <article id="github">
+                <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="github">
+                <p>Github:</p>
+            </article>
     </footer>
 </body>
 </html>
